--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 					<div class="row fullscreen d-flex justify-content-center align-items-center">
 						<div class="banner-content col-lg-10 col-md-12 justify-content-center">
 							<h6 class="text-uppercase">Whenever we bake, bake with our heart</h6>
-							<embed width="420" height="315"
-src="https://www.youtube.com/watch?v=jocqSL3m-3U?autoplay=1">
-
+							<h1>
+								Love with baking items			
+							</h1>
 							<p class="text-white mx-auto">
 								Since Americans in the South began roasting pigs publicly, Barbecues have been a staple of North American living. For many, grilling becomes a routine mealtime activity.
 							</p>
@@ -110,18 +110,8 @@ src="https://www.youtube.com/watch?v=jocqSL3m-3U?autoplay=1">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-9">
-							<h6 class="text-uppercase">Brand new app to blow your mind</h6>
-							<h1>
-								We’ve baked every item
-								from the core of our heart to serve you
-							</h1>
-							<p>
-								<span>We are here to listen from you deliver exellence by any means</span>
-							</p>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp or incididunt ut labore et dolore magna aliqua. Ut enim ad minim. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp or incididunt ut labore et dolore magna aliqua. Ut enim ad minim.
-							</p>
-							<a class="primary-btn squire mx-auto mt-20" href="#">Get Started Now</a>						
+							<embed width="420" height="315"
+src="https://www.youtube.com/watch?v=jocqSL3m-3U">					
 						</div>
 					</div>
 				</div>	
