--- a/index.html
+++ b/index.html
@@ -110,8 +110,18 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-9">
-							<embed width="420" height="315"
-src="https://www.youtube.com/watch?v=jocqSL3m-3U">					
+							<h6 class="text-uppercase">Brand new app to blow your mind</h6>
+							<h1>
+								We’ve baked every item
+								from the core of our heart to serve you
+							</h1>
+							<p>
+								<span>We are here to listen from you deliver exellence by any means</span>
+							</p>
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp or incididunt ut labore et dolore magna aliqua. Ut enim ad minim. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp or incididunt ut labore et dolore magna aliqua. Ut enim ad minim.
+							</p>
+							<a class="primary-btn squire mx-auto mt-20" href="#">Get Started Now</a>						
 						</div>
 					</div>
 				</div>	
